tdf#157820: handle \\?\ prefixes in INetURLObject

They are already handled in osl file URL functions.

Change-Id: Id0c224bdb79963e7ce52abde57bf05b0a6a81ff5
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/158741
Reviewed-by: Stephan Bergmann <sbergman@redhat.com>
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit 9f1289f1e3c9b4a5f2be7a7187877db6b5015973)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/158705